# Castaway

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  config.py  csrf.py  entrypoint.sh  main.py  requirements.txt  templating.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_mfa.py  003_subdomain.py  004_audit_log_and_key_expiry.py
backend/models/: __init__.py  api_key.py  audit_log.py  base.py  connection.py  folder.py  phpipam_config.py  session_log.py  setting.py  tag.py  user.py  vaultwarden_config.py
backend/routers/: api_keys.py  auth.py  connections.py  folders.py  import_export.py  mfa.py  pages.py  phpipam.py  rdp.py  sessions.py  settings.py  subdomain_ws.py  tags.py  users.py  vaultwarden.py  web_proxy.py  ws_ssh.py
backend/schemas/: auth.py  connection.py  folder.py  tag.py
backend/services/: audit.py  keeper_import.py  mfa.py  phpipam.py  rdp_generator.py  scheduler.py  screenshots.py  status_check.py  subdomain_proxy.py  vaultwarden.py
backend/static/css/: app.css
backend/static/js/: app.js
backend/templates/: base.html  login.html  profile.html  register.html  terminal.html
backend/templates/connections/: form.html  list.html
backend/templates/sessions/: list.html
backend/templates/settings/: general.html  import.html  phpipam.html  vaultwarden.html
backend/templates/users/: list.html
cli/: __main__.py  api_client.py  main.py
cli/commands/: config.py  connections.py  sync.py
docs/: NPM-SETUP.md  SUBDOMAIN-PROXY.md
