[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "castaway-cli"
version = "0.1.0"
description = "Castaway — Self-hosted SSH Session Manager CLI"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.5",
    "httpx>=0.27.0",
]

[project.scripts]
castaway = "cli.main:app"
